# oaqjp-final-project-emb-ai

./: emotion_detection.py  main.py  pyproject.toml  server.py  test_emotion_detection.py
EmotionDetection/: emotion_detection.py
tests/: test_e2e_emotion_detection.py  test_integration_emotion_detection.py  test_unit_emotion_detection.py
